--- a/src/main/webapp/app/entities/compra/compra-detail.component.html
+++ b/src/main/webapp/app/entities/compra/compra-detail.component.html
@@ -33,6 +33,14 @@
                 <dd>
                     <span>{{compra.tipoDePagoDeCompra}}</span>
                 </dd>
+                <dt><span>Tipo De Transaccion</span></dt>
+                <dd>
+                    <span>{{compra.tipoDeTransaccion}}</span>
+                </dd>
+                <dt><span>Estatus</span></dt>
+                <dd>
+                    <span>{{compra.estatus}}</span>
+                </dd>
                 <dt><span>Meta Data</span></dt>
                 <dd>
                     <span>{{compra.metaData}}</span>
