--- a/frontend/src/app/pages2/invoice/invoice2.component.scss
+++ b/frontend/src/app/pages2/invoice/invoice2.component.scss
@@ -16,6 +16,9 @@ th, td {
   border-radius: 1px;
 }
 
+.headerCellColum{
+  font-weight: bold;
+}
 .ngx-datatable.material.datatable-header.datatable-header-cell.datatable-header-cell.sortable.resizeable{
   font-size: initial;
   font-weight: bold;
