--- a/frontend/src/app/ventas/sell/sell-update.component.scss
+++ b/frontend/src/app/ventas/sell/sell-update.component.scss
@@ -66,6 +66,10 @@ input.mat-input-element {
   margin-top: 1rem;
 }
 
+.mat-row.mat-row.ng-star-inserted{
+  height: 50px;
+}
+
 .mat-card.oh.mat-card {
   text-align: center;
   max-height: 170px;
