purchases 2 and fixes sell

--- a/frontend/src/app/pages2/invoice/invoice2.component.html
+++ b/frontend/src/app/pages2/invoice/invoice2.component.html
@@ -137,9 +137,9 @@
       <div style="border-bottom: 1px solid;  position: relative; bottom: -20%;" fxFlex.gt-xs="100" fxFlex="100">
         <span  style="font-size:8px;">Estimado cliente reserve su comprobante, por regulación de la SUNAT es indispensable presentarlo para solicitar cambios o devoluciones</span>
       </div>
-      <div style="position: relative; bottom: -20%;" fxFlex.gt-xs="100" fxFlex="100">
-        <span style="font-size:10px; font-weight: bold;">*** SON </span>
-      </div>
+      <!--<div style="position: relative; bottom: -20%;" fxFlex.gt-xs="100" fxFlex="100">-->
+        <!--<span style="font-size:10px; font-weight: bold;">*** SON </span>-->
+      <!--</div>-->
       <div fxFlex.gt-xs="20" fxFlex="100">
         <img style="width:120px; position: relative; top: 50%;" mat-card-image src= "assets/images/big/QRCode.png" alt="QR">
       </div>
