--- a/frontend/src/app/ventas/amortizacion/amortizacion.component.html
+++ b/frontend/src/app/ventas/amortizacion/amortizacion.component.html
@@ -14,7 +14,7 @@
             </mat-form-field>
             
             <div fxFlex.gt-sm="35" fxFlex="35" id="newSection">
-              <button mat-raised-button color="primary" [disabled]="!entity" (click)="addExtraInfoSell()">Amortizar</button>
+              <button style="position: relative; left: -70%; top: 20%;" mat-raised-button color="primary" [disabled]="!entity" (click)="addExtraInfoSell()">Amortizar</button>
             </div>
           </div>
 
