--- a/frontend/src/app/compras/purchase/purchase.component.html
+++ b/frontend/src/app/compras/purchase/purchase.component.html
@@ -3,7 +3,7 @@
   <div fxFlex.gt-lg="100" fxFlex.gt-md="100" fxFlex.gt-xs="100" fxFlex="100">
     <mat-card>
       <mat-card-content>
-        <mat-card-title>Compras</mat-card-title>
+        <mat-card-title>Todas las compras</mat-card-title>
 
         <div class="responsive-table">
           <div fxLayout="row wrap">    
@@ -14,7 +14,7 @@
             </mat-form-field>
             
             <div fxFlex.gt-sm="35" fxFlex="35" id="newSection">
-              <button mat-raised-button color="primary" [routerLink]="['/compras/purchase/new']">Nueva Venta</button>
+              <button style="position: absolute; left: 67%; top: 33%;" mat-raised-button color="primary" [routerLink]="['/compras/purchase/new']">Nueva Compra</button>
             </div>
           </div>
 
@@ -37,7 +37,7 @@
             </ng-container>
 
             <ng-container matColumnDef="proveedor">
-              <mat-header-cell *matHeaderCellDef> Proveedor </mat-header-cell>
+              <mat-header-cell style="font-weight: bold" *matHeaderCellDef> Proveedor </mat-header-cell>
               <mat-cell style="color:#23527c" *matCellDef="let element">
                 <span class="header-label">Proveedor:</span>
                 {{element.proveedorId}}
@@ -45,7 +45,7 @@
             </ng-container>
 
             <ng-container matColumnDef="comprobante">
-              <mat-header-cell *matHeaderCellDef> Comprobante </mat-header-cell>
+              <mat-header-cell style="font-weight: bold" *matHeaderCellDef> Comprobante </mat-header-cell>
               <mat-cell style="color:#23527c" *matCellDef="let element">
                 <span class="header-label">Comprobante:</span>
                 {{element.tipoDeDocumentoDeCompraNombre + ' ' + element.numeroDeDocumento}}
@@ -53,7 +53,7 @@
             </ng-container>
 
             <ng-container matColumnDef="correlativo">
-              <mat-header-cell *matHeaderCellDef> Correlativo </mat-header-cell>
+              <mat-header-cell style="font-weight: bold" *matHeaderCellDef> Correlativo </mat-header-cell>
               <mat-cell style="color:#23527c" *matCellDef="let element">
                 <span class="header-label">Correlativo:</span>
                 {{'FEB2019-000' + element.id}}
@@ -61,7 +61,7 @@
             </ng-container>
 
             <ng-container matColumnDef="fecha">
-              <mat-header-cell *matHeaderCellDef> Fecha </mat-header-cell>
+              <mat-header-cell style="font-weight: bold" *matHeaderCellDef> Fecha </mat-header-cell>
               <mat-cell style="color:#23527c" *matCellDef="let element">
                 <span class="header-label">Fecha:</span>
                 {{element.fecha}}
@@ -69,7 +69,7 @@
             </ng-container>
 
             <ng-container matColumnDef="total">
-              <mat-header-cell *matHeaderCellDef> Total </mat-header-cell>
+              <mat-header-cell style="font-weight: bold" *matHeaderCellDef> Total </mat-header-cell>
               <mat-cell style="color:#23527c" *matCellDef="let element">
                 <span class="header-label">Total:</span>
                 {{'S./' + element.montoTotal}}
@@ -77,7 +77,7 @@
             </ng-container>
 
             <ng-container matColumnDef="transacción">
-              <mat-header-cell *matHeaderCellDef> Transacción </mat-header-cell>
+              <mat-header-cell style="font-weight: bold" *matHeaderCellDef> Transacción </mat-header-cell>
               <mat-cell style="color:#23527c" *matCellDef="let element">
                 <span class="header-label">Transacción:</span>
                 {{element.tipoDePagoDeCompra}}
@@ -85,7 +85,7 @@
             </ng-container>
 
             <ng-container matColumnDef="estado">
-              <mat-header-cell *matHeaderCellDef> Estado </mat-header-cell>
+              <mat-header-cell style="font-weight: bold" *matHeaderCellDef> Estado </mat-header-cell>
               <mat-cell *matCellDef="let element">
                 <span class="header-label">Estado:</span>
                 <mat-chip [ngStyle]="{'background-color': element.estatus !== 'COMPLETADO' ? '#f8ac59' : '#1ab394'}">{{element.estatus}}</mat-chip>
@@ -93,7 +93,7 @@
             </ng-container>
 
             <ng-container matColumnDef="star">
-              <mat-header-cell *matHeaderCellDef> Acciones </mat-header-cell>
+              <mat-header-cell style="font-weight: bold" *matHeaderCellDef> Acciones </mat-header-cell>
               <mat-cell *matCellDef="let element">
                 <a class="ng-star-inserted" [routerLink]="['/compras/purchase', element.id, 'edit']">
                   <i class="ti-pencil text-info m-r-10"></i>
