--- a/frontend/src/app/pages2/invoice/invoice2.component.html
+++ b/frontend/src/app/pages2/invoice/invoice2.component.html
@@ -1,12 +1,12 @@
-<mat-card style="max-width: 695px;" *ngIf="venta">
+<mat-card style="max-width: 595px;" *ngIf="venta">
   <mat-card-content>
 
     <div style="margin-bottom: 20px;" fxLayout="row wrap">
-      <div style="border-right: solid; text-align: center;" fxFlex.gt-xs="20" fxFlex="100">
+      <div style="border-right: solid; text-align: center;" fxFlex.gt-xs="20" fxFlex="20">
         <span>LOGO</span>
       </div>
 
-      <div style="border:none; line-height: initial;" fxFlex.gt-xs="25" fxFlex="100">
+      <div style="border:none; line-height: initial;" fxFlex.gt-xs="25" fxFlex="25">
         <table class="table">
           <thead>
           <tr>
@@ -33,7 +33,7 @@
 
       <div
         style="height:100%; position: relative; right: -67px; border-radius: 10px; border: none; text-transform: uppercase; line-height: 30px"
-        fxFlex.gt-xs="45" fxFlex="100">
+        fxFlex.gt-xs="45" fxFlex="45">
         <table class="table-header-fact">
           <thead>
           <tr>
@@ -57,7 +57,7 @@
     </div>
 
     <div fxLayout="row wrap">
-      <div style="border-style: solid; " fxFlex.gt-xs="62" fxFlex="100">
+      <div style="border-style: solid; " fxFlex.gt-xs="62" fxFlex="62">
         <table class="table">
           <thead>
           <tr>
@@ -83,7 +83,7 @@
       </div>
 
 
-      <div style="border-style: solid; position: relative; right: -20px;" fxFlex.gt-xs="35" fxFlex="100">
+      <div style="border-style: solid; position: relative; right: -20px;" fxFlex.gt-xs="35" fxFlex="35">
         <table class="table">
           <thead>
           <tr>
@@ -134,16 +134,16 @@
   <!--Aca hacia abajo la actual-->
   <mat-card-content>
     <div fxLayout="row wrap">
-      <div style="border-bottom: 1px solid;  position: relative; bottom: -20%;" fxFlex.gt-xs="100" fxFlex="100">
-        <span  style="font-size:8px;">Estimado cliente reserve su comprobante, por regulación de la SUNAT es indispensable presentarlo para solicitar cambios o devoluciones</span>
+      <div style="border-bottom: 1px solid;  position: relative; bottom: -20%;     margin-bottom: -10%;margin-top: 10%;" fxFlex.gt-xs="100" fxFlex="100">
+        <span  style="font-size:7.5px;">Estimado cliente reserve su comprobante, por regulación de la SUNAT es indispensable presentarlo para solicitar cambios o devoluciones</span>
       </div>
       <!--<div style="position: relative; bottom: -20%;" fxFlex.gt-xs="100" fxFlex="100">-->
         <!--<span style="font-size:10px; font-weight: bold;">*** SON </span>-->
       <!--</div>-->
-      <div fxFlex.gt-xs="20" fxFlex="100">
+      <div fxFlex.gt-xs="20" fxFlex="20">
         <img style="width:120px; position: relative; top: 50%;" mat-card-image src= "assets/images/big/QRCode.png" alt="QR">
       </div>
-      <div fxFlex.gt-xs="40" fxFlex="100">
+      <div fxFlex.gt-xs="40" fxFlex="40" style="    margin-left: 4%;">
         <table style="position: relative; top: 45%;" class="table">
           <thead>
           <tr>
@@ -160,10 +160,10 @@
           </tbody>
         </table>
       </div>
-      <div fxFlex.gt-xs="35" fxFlex="100" class="text-right">
+      <div fxFlex.gt-xs="35" fxFlex="35" class="text-right">
         <div class="d-flex align-items-center">
 
-          <div style="border-style: solid; position: relative; bottom: -17%; right: -20px; top: 18%; margin-top: 100px;" fxFlex.gt-xs="95" fxFlex="100">
+          <div style="border-style: solid; position: relative; bottom: -17%; right: -20px; top: 18%; margin-top: 100px;" fxFlex.gt-xs="95" fxFlex="95">
             <table class="table">
               <thead>
               <tr>
@@ -173,7 +173,7 @@
               </thead>
               <tbody>
               <tr>
-                <th scope="row">Tax</th>
+                <th scope="row">IGV({{venta.impuesto}}%)</th>
                 <th>S/ {{parseFloatCustom((venta.subTotal * venta.impuesto) / 100)}}</th>
               </tr>
               <tr>
