fix issues front

--- a/frontend/src/app/ventas/sell/sell-notification-error.component.html
+++ b/frontend/src/app/ventas/sell/sell-notification-error.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title style="text-align: center;">Atención</h1>
+<h1 mat-dialog-title style="text-align: center;     background-color: #ff1100;color: white;">Atención</h1>
 <div mat-dialog-content>
   <div fxLayout="row wrap">
   </div>
