--- a/frontend/src/app/ventas/sell/sell-limit-stock-error.component.html
+++ b/frontend/src/app/ventas/sell/sell-limit-stock-error.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title style="text-align: center;">Atención</h1>
+<h1 mat-dialog-title style="text-align: center;    background-color: #ff1100;color: white;">Atención</h1>
 <div mat-dialog-content>
   <div fxLayout="row wrap">
   </div>
@@ -7,6 +7,5 @@
   </div>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()" tabindex="2">Listo</button>
   <button mat-button (click)="onNoClick()" tabindex="-1">Aceptar</button>
 </div>
