issue hover in all product cards.

--- a/frontend/src/app/ventas/sell/sell-update.component.scss
+++ b/frontend/src/app/ventas/sell/sell-update.component.scss
@@ -90,6 +90,16 @@ input.mat-input-element {
   transition-duration: 1s;
 }
 
+.mat-card.oh.mat-card:hover,
+.mat-card.oh.mat-card:focus{
+
+  .dm-1{
+    transform: translate(0%, -70%);
+  }
+}
+
+
+
 .dm-1:hover,
 .dm-1:focus{
   //position: absolute !important;
